agregada carpeta assets

--- a/index2.html
+++ b/index2.html
@@ -7,7 +7,7 @@
 <meta name="description" content="Particiones S.A. fabrica y comercializa separadores de fibra sólida de papel reciclado para la industria del vino, aceite, y otras. Contacto: +562 2739 1153" />
 <meta name="keywords" content="Separadores, Tabiques, Particiones, Embalaje, Fibra sólida, Partitions, Box partitions,Fiber partitions " />
 
-<link href="css/estilos.css" rel="stylesheet" type="text/css" />
+<link href="assets/css/estilos.css" rel="stylesheet" type="text/css" />
 <link href='http://fonts.googleapis.com/css?family=Muli:300,400' rel='stylesheet' type='text/css'>
 <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,600,700,300,800' rel='stylesheet' type='text/css'>
 <link rel="stylesheet" type="text/css" href="css/demo.css" />
@@ -153,9 +153,6 @@ function MM_swapImage() { //v3.0
 <div class="redes">
   <div class="redes_int">
     <!--<div class="cajaRedes" style="margin-right:25px"><a href="youtube" target="_blank"><img class="fade" src="img/youtube.png" width="68" height="68" alt="Vea nuestro canal de Youtube" /></a></div>-->
-    <div class="cajaRedes"><a href="javascript:void(0);"><img class="fade" src="img/skype.png" width="68" height="68" alt="Skype" title="Agréguenos en Skype"/></a></div>
-    <div class="cajaRedes"><a href="linkedin" target="_blank"><img class="fade" src="img/linkedin.png" width="68" height="68" alt="Linkedin" title="Búsquenos en Linkedin"/></a></div>
-    <div class="cajaRedes"><a href="https://www.facebook.com/people/Particiones-SA/100006811399122" target="_blank"><img class="fade" src="img/face.png" width="68" height="68" alt="Facebook" title="Síganos en Facebook" /></a></div>
     <div class="cajaRedes2"><a href="servicio/iso9001.html"><img src="img/iso_footer.png" width="159" height="117" /></a></div>
   </div>
 </div>
