--- a/servicio/iso9001.html
+++ b/servicio/iso9001.html
@@ -15,7 +15,7 @@
 <link rel="shortcut icon" href="../favicon.ico" type="image/x-icon">
 <link rel="icon" href="../favicon.ico" type="image/x-icon">
 
-<link href="../css/estilos.css" rel="stylesheet" type="text/css" />
+<link href="../assets/css/estilos.css" rel="stylesheet" type="text/css" />
 <link href='http://fonts.googleapis.com/css?family=Muli:300,400' rel='stylesheet' type='text/css'>
 <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,600,700,300,800' rel='stylesheet' type='text/css'>
 
