solucion cache estilos

--- a/test.html
+++ b/test.html
@@ -6,7 +6,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <title>test </title>
 
-    <link href="assets/css/estilos.css" rel="stylesheet" type="text/css" />
+    <link rel="stylesheet" type="text/css" href="assets/css/estilos.php" />
 </head>
 
 <body>
