--- a/empresa/index.html
+++ b/empresa/index.html
@@ -10,7 +10,7 @@
 <link rel="shortcut icon" href="../favicon.ico" type="image/x-icon">
 <link rel="icon" href="../favicon.ico" type="image/x-icon">
 
-<link href="../assets/css/estilos.css" rel="stylesheet" type="text/css" />
+<link href="../css/estilos.css" rel="stylesheet" type="text/css" />
 <link href='http://fonts.googleapis.com/css?family=Muli:300,400' rel='stylesheet' type='text/css'>
 <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,600,700,300,800' rel='stylesheet' type='text/css'>
 
@@ -28,6 +28,8 @@
 <link rel="stylesheet" type="text/css" href="../css/new/demo.css" />
 <link rel="stylesheet" type="text/css" href="../css/new/common.css" />
 <link rel="stylesheet" type="text/css" href="../css/new/style5.css" />
+<link rel="stylesheet" type="text/css" href="assets/css/estilos.php" />
+
 <link rel="shortcut icon" type="image/x-icon" href="img/favicon.ico"/>
 </head>
 
