--- a/clientes/index.html
+++ b/clientes/index.html
@@ -26,7 +26,7 @@
 <link rel="stylesheet" type="text/css" href="../css/new/demo.css" />
 <link rel="stylesheet" type="text/css" href="../css/new/common.css" />
 <link rel="stylesheet" type="text/css" href="../css/new/style5.css" />
-<link rel="stylesheet" type="text/css" href="assets/css/estilos.php" />
+<link rel="stylesheet" type="text/css" href="../assets/css/estilos.php" />
 
 </head>
 
