--- a/contacto/index.html
+++ b/contacto/index.html
@@ -16,7 +16,8 @@
 
 <link rel="stylesheet" type="text/css" href="../css/demo.css" />
 <link rel="stylesheet" type="text/css" href="../css/style2.css" />
-<link rel="stylesheet" type="text/css" href="assets/css/estilos.php" />
+<link rel="stylesheet" type="text/css" href="../assets/css/estilos.php" />
+
 <link href='http://fonts.googleapis.com/css?family=Open+Sans+Condensed:300|Playfair+Display:400italic' rel='stylesheet' type='text/css' />
 <script type="text/javascript">
 function MM_swapImgRestore() { //v3.0
