--- a/empresa/index.html
+++ b/empresa/index.html
@@ -28,7 +28,7 @@
 <link rel="stylesheet" type="text/css" href="../css/new/demo.css" />
 <link rel="stylesheet" type="text/css" href="../css/new/common.css" />
 <link rel="stylesheet" type="text/css" href="../css/new/style5.css" />
-<link rel="stylesheet" type="text/css" href="assets/css/estilos.php" />
+<link rel="stylesheet" type="text/css" href="../assets/css/estilos.php" />
 
 <link rel="shortcut icon" type="image/x-icon" href="img/favicon.ico"/>
 </head>
